--- a/pom.xml
+++ b/pom.xml
@@ -24,19 +24,19 @@
     <distributionManagement>
         <repository>
             <id>my-nexus-releases</id>
-            <url>http://nexus.xxx.com/content/repositories/releases/</url>
+            <url>http://nexus.binggejia.com/content/repositories/releases/</url>
         </repository>
 
         <snapshotRepository>
             <id>my-nexus-snapshot</id>
-            <url>http://nexus.xxx.com/content/repositories/snapshots/</url>
+            <url>http://nexus.binggejia.com/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:https://github.com/goudai/spring-boot-starter-runner.git</connection>
-        <developerConnection>scm:git:https://github.com/goudai/spring-boot-starter-runner.git</developerConnection>
-        <url>scm:git:https://github.com/goudai/spring-boot-starter-runner.git</url>
+        <connection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</connection>
+        <developerConnection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</developerConnection>
+        <url>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</url>
         <tag>HEAD</tag>
     </scm>
 
