--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.goudai</groupId>
     <artifactId>spring-boot-starter-id-generator</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>spring-boot-starter-id-generator-zookeeper</module>
     </modules>
@@ -37,7 +36,7 @@
         <connection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</connection>
         <developerConnection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</developerConnection>
         <url>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</url>
-        <tag>HEAD</tag>
+        <tag>spring-boot-starter-id-generator-1.0.0</tag>
     </scm>
 
 
