--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>io.goudai</groupId>
     <artifactId>spring-boot-starter-id-generator</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <modules>
         <module>spring-boot-starter-id-generator-zookeeper</module>
     </modules>
@@ -36,7 +36,7 @@
         <connection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</connection>
         <developerConnection>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</developerConnection>
         <url>scm:git:https://github.com/goudai/spring-boot-starter-id-generator.git</url>
-        <tag>spring-boot-starter-id-generator-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
