--- a/spring-boot-starter-id-generator-zookeeper/pom.xml
+++ b/spring-boot-starter-id-generator-zookeeper/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>spring-boot-starter-id-generator</artifactId>
         <groupId>io.github.goudai</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
